# RISCV-Simulator

./: .gitignore  .travis.yml  Branch.md  CMakeLists.txt  LICENSE  README.md  README_cn.md  STAGE.md  docs.tex
data/: array_test1.data  array_test2.data  basicopt1.data  bulgarian.data  expr.data  gcd.data  hanoi.data  lvalue2.data  magic.data  manyarguments.data  multiarray.data  naive.data  pi.data  qsort.data  queens.data  statement_test.data  superloop.data  tak.data
docs/: main.tex
docs/tables/: branch_prediction.csv
src/: Common.h  Instruction.cpp  Instruction.h  Instruction.hpp  Instruction_test.cpp  Memory.hpp  Memory_test.cpp  Parser.cpp  Parser.h  Parser.hpp  Parser_test.cpp  Register.hpp  RegisterFile.hpp  RegisterFile_test.cpp  Register_test.cpp  ReservationStation.cpp  ReservationStation.h  ReservationStation.hpp  Session.cpp  Session.h  Session_test.cpp  Tickable.h  main.cpp  main_presentation.cpp  main_test.cpp  simulator.cpp  utils.cpp  utils.h
src/Common/: Instruction.hpp  Instruction_test.cpp  Memory.hpp  Memory_test.cpp  Parser_test.cpp  Register.hpp  RegisterFile.hpp  RegisterFile_test.cpp  ReorderBuffer.cpp  ReorderBuffer.h  ReservationStation.cpp  ReservationStation.h  Session.cpp  Session.h  utils.cpp  utils.h
src/Module/: ALU.cpp  ALU.h  ALUUnit.cpp  ALUUnit.h  ALU_test.cpp  Branch.cpp  Branch.h  BranchPrediction.cpp  BranchPrediction.h  CommitUnit.cpp  CommitUnit.h  LoadStoreUnit.cpp  LoadStoreUnit.h
src/Pipeline/: Decode.cpp  Decode.h  Execute.cpp  Execute.h  Fetch.cpp  Fetch.h  Issue.cpp  Issue.h  Memory.cpp  Memory.h  MemoryAccess.cpp  MemoryAccess.h  OoOCommon.h  OoOExecute.cpp  OoOExecute.h  Stage.h  Stage.hpp  Stage_test.cpp  WriteBack.cpp  WriteBack.h
tests/: control-hazard-1.asm  control-hazard-1.hex  control-hazard-2.asm  control-hazard-2.hex  control-hazard-3.asm  control-hazard-3.hex  data-hazard-1.asm  data-hazard-1.hex  data-hazard-2.asm  data-hazard-2.hex  out-of-order-1.asm  out-of-order-1.hex  out-of-order-2.asm  out-of-order-2.hex  out-of-order-3.asm  out-of-order-3.hex  rename-register-1.asm  rename-register-1.hex
